modules/gdscript/tests/scripts/runtime/errors/while_condition_error_line.gd
func test() -> void:
	var array: Array[int] = [1, 2, 3]
	var i: int = 0
	while array[i] < 9:
		i += 1
